# cs-apml-assignments

./: README.md  pyproject.toml
src/01-spam-classification/: Spam_project_subject_2025.ipynb
src/02-geyser/params/: faithful0.pkl  faithful1.pkl  faithful10.pkl  faithful11.pkl  faithful12.pkl  faithful13.pkl  faithful14.pkl  faithful15.pkl  faithful16.pkl  faithful17.pkl  faithful18.pkl  faithful19.pkl  faithful2.pkl  faithful20.pkl  faithful21.pkl  faithful22.pkl  faithful3.pkl  faithful4.pkl  faithful5.pkl  faithful6.pkl  faithful7.pkl  faithful8.pkl  faithful9.pkl
src/02-geyser/params_bad/: faithful0.pkl  faithful1.pkl  faithful10.pkl  faithful11.pkl  faithful12.pkl  faithful13.pkl  faithful14.pkl  faithful15.pkl  faithful16.pkl  faithful17.pkl  faithful18.pkl  faithful19.pkl  faithful2.pkl  faithful20.pkl  faithful21.pkl  faithful22.pkl  faithful23.pkl  faithful24.pkl  faithful25.pkl  faithful26.pkl  faithful27.pkl  faithful28.pkl  faithful29.pkl  faithful3.pkl  faithful30.pkl  faithful31.pkl  faithful32.pkl  faithful33.pkl  faithful34.pkl  faithful35.pkl  faithful36.pkl  faithful37.pkl  faithful38.pkl  faithful39.pkl  faithful4.pkl  faithful40.pkl  (+33 more)
src/03-mixture-model/: Project_Mixture_model.ipynb
src/04-image-classification/: Project_regression_analysis.ipynb
src/05-monopoly/: Monopoly.ipynb
src/06-text-decoding/: MCMC_project.ipynb
src/07-gene-prediction/: HMM_Gene_prediction.ipynb
src/08-lda-ancestry/: LDA_project.ipynb  lda_mex_results.json  lda_model_results.json  lda_model_results_old.json  noAdmixed_1000G_id_labels.csv  recoded_1000G_MXL.mat.xz
(+105 files in other folders)
