[tool.poetry]
name = "cs-apml-assignments"
version = "0.1.0"
description = ""
authors = ["Vincent Eichhorn <vincent.eichhorn@student.hpi.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
numpy = "^2.3.4"
pandas = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
