[tool.poetry]
name = "cs-apml-assignments"
version = "0.1.0"
description = ""
authors = ["Vincent Eichhorn <vincent.eichhorn@student.hpi.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
numpy = "^2.3.4"
pandas = "^2.3.3"
ipykernel = "^7.0.1"
matplotlib = "^3.10.7"
plotly = "^6.4.0"
keras = "^3.12.0"
notebook = "^7.5.0"
tensorflow = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
